Ensure only first top-level section gets extra padding

--- a/assets/scss/_main-container.scss
+++ b/assets/scss/_main-container.scss
@@ -1,3 +1,4 @@
+/* grpc-docsy custom file */
 // The outer page container i.e. common styles for any page.
 .td-outer {
     display: flex;
@@ -8,7 +9,7 @@
 // The outer page container for the default base template.
 .td-default {
     main {
-        section:first-of-type {
+        > section:first-of-type {
             @include media-breakpoint-up(md) {
                 padding-top: 8rem;
             }
